--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "google-maps": "^4.3.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.5",
     "multer": "^1.4.3",
@@ -32,5 +33,8 @@
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.25.1"
   },
-  "engines": {"node":"16.9.1", "npm": "7.21.1"}
+  "engines": {
+    "node": "16.9.1",
+    "npm": "7.21.1"
+  }
 }
