--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "express-async-handler": "^1.1.4",
     "google-maps": "^4.3.3",
     "jsonwebtoken": "^8.5.1",
+    "mailgun-js": "^0.22.0",
     "mongoose": "^6.0.5",
     "multer": "^1.4.3",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "socket.io": "^4.3.2"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
